updated comparison and explainability

--- a/notebooks/Compare_Models.ipynb
+++ b/notebooks/Compare_Models.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "94b07410",
    "metadata": {},
    "outputs": [],
@@ -31,17 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "21e50fc6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load classification reports and confusion matrices\n",
-    "with open(\"/workspaces/phishing-flask-api/metrics/metrics_lr.json\", \"r\") as f:\n",
+    "with open(\"../metrics/metrics_lr.json\", \"r\") as f:\n",
     "    lr_metrics = json.load(f)\n",
-    "with open(\"/workspaces/phishing-flask-api/metrics/metrics_rf.json\", \"r\") as f:\n",
+    "with open(\"../metrics/metrics_rf.json\", \"r\") as f:\n",
     "    rf_metrics = json.load(f)\n",
-    "with open(\"/workspaces/phishing-flask-api/metrics/metrics_xgb.json\", \"r\") as f:\n",
+    "#with open(\"/workspaces/phishing-flask-api/metrics/metrics_xgb.json\", \"r\") as f:\n",
+    "with open(\"../metrics/metrics_xgb.json\", \"r\") as f:\n",
     "    xgb_metrics = json.load(f)\n",
     "\n",
     "lr_report = pd.DataFrame(lr_metrics['classification_report']).transpose()\n",
@@ -513,7 +514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
